fix: button stacking on mobile

--- a/resources/static/randhaj.css
+++ b/resources/static/randhaj.css
@@ -9,6 +9,9 @@
         max-width: 100%;
         max-height: 50vh;
     }
+    #image-page .card-body.btn-group {
+        flex-direction: column;
+    }
 }
 
 html {
